// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Snapshot 1`] = `
<table
  className="myClass"
>
  <thead>
    <tr>
      <th>
        Email
      </th>
    </tr>
  </thead>
  <tbody />
</table>
`;

exports[`List Snapshot with data 1`] = `
<table
  className="myClass"
>
  <thead>
    <tr>
      <th>
        Email
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Email 1
      </td>
    </tr>
    <tr>
      <td>
        Email 2
      </td>
    </tr>
    <tr>
      <td>
        Email 3
      </td>
    </tr>
  </tbody>
</table>
`;
